Fixed table overflow for admin dashboard

--- a/assets/styl/app.styl
+++ b/assets/styl/app.styl
@@ -30,6 +30,7 @@
 
 #content
   margin-top 50px
+  padding-bottom 80px
 
 .form-signin
   max-width 330px
